<resources>
    <string name="app_name">HTML5 killer</string>

    <!-- Strings related to login -->
    <string name="prompt_username">username</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">enter your Password again</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="tv_registerhere">Register Here</string>


</resources>
