<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="150dp"
    android:adjustViewBounds="true"
    tools:context="com.MARS.fyp.html5killer.LoginActivity"
    android:weightSum="1">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/prompt_username"
        android:ems="10"
        android:id="@+id/etUsername" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/prompt_password"
        android:ems="10"
        android:id="@+id/etPassword" />

    <Button
        android:text="@string/action_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bLogin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_registerhere"
        android:id="@+id/tvRegisterhere" />
</LinearLayout>
